# pylocc

./: .gitignore  404.html  AGENTS.md  README.md  build_hook.py  index.html  main.py  pyproject.toml  sitemap.xml
.github/workflows/: build_exe.yml  deploy-docs.yml  release.yml  test-workflow.yml  tests.yml
assets/css/: styles.8ee86ec7.css
assets/js/: 2d61a046.686693e7.js  2d61a046.85aa5901.js  2d61a046.ef6f751e.js  393be207.5784ed3d.js  3b8c55ea.4f8a62b6.js  3b8c55ea.89c5030e.js  6476eba6.d1bfaf2a.js  6476eba6.f509a9a2.js  7972f20c.05dfc134.js  7972f20c.2a1019ee.js  7972f20c.621d1b57.js  9ed00105.58e34e1b.js  9ed00105.e38a0a55.js  b08ef44b.524c6158.js  bb7031b9.23635af9.js  c4f5d8e4.963fbdc5.js  fed7d42c.28a4ff23.js  main.0fe9d718.js  main.1570245a.js  main.704fd11d.js  runtime~main.3db10f47.js  runtime~main.baf63de1.js  runtime~main.c49316b5.js  runtime~main.e15c7d1c.js
docs/: CI_PIPELINE.md  package-lock.json
docs/api-usage/: index.html
docs/cli-usage/: index.html
docs/configuration/: index.html
docs/docs/: api-usage.md
docs/installation/: index.html
docs/intro/: index.html
docs/src/css/: custom.css
docs/src/pages/: index.js
docs/supported-languages/: index.html
docs/usage/: index.html
markdown-page/: index.html
scripts/: build_exe.sh
src/pylocc/: cli.py  file_utils.py  language.json  processor.py  reporter.py
test/: test_cli.py  test_file_utils.py  test_processor.py  test_reporter.py
tests/: test_reporter.py
